# camera_aravis

./:  .travis.yml  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.markdown  README.md  mainpage.dox  nodelet_plugins.xml  package.xml
.github/workflows/: industrial_ci_action.yml
CMakeModules/: FindAravis.cmake
cfg/: CameraAravis.cfg  CameraAravisConfig.cfg
include/camera_aravis/: camera_aravis_nodelet.h  camera_buffer_pool.h  conversion_utils.h  convertion_utils.h
launch/: calib_nir.yaml  calib_vis.yaml  camera_aravis.launch  camera_diagnostics.yaml  multisource_camera_aravis.launch  respawning_camera_aravis.launch
msg/: CameraAutoInfo.msg  CameraDiagnostics.msg  ExtendedCameraInfo.msg
scripts/: launch_script.sh
src/: camera_aravis_node.cpp  camera_aravis_nodelet.cpp  camera_buffer_pool.cpp  camnode.cpp  camnode.cpp~  conversion_utils.cpp  convertion_utils.cpp  export_genicam_xml_node.cpp
srv/: get_boolean_feature_value.srv  get_float_feature_value.srv  get_integer_feature_value.srv  get_string_feature_value.srv  one_shot_white_balance.srv  set_boolean_feature_value.srv  set_float_feature_value.srv  set_integer_feature_value.srv  set_string_feature_value.srv
yaml/: roi.yaml
