<package format="2">
  <name>camera_aravis</name>
  <version>3.0.0</version>
  <description>camera_aravis: A GenICam/USB3Vision based camera driver for ROS (ethernet and usb).</description>

  <maintainer email="dominik.klein@fkie.fraunhofer.de">Dominik A. Klein, Fraunhofer FKIE</maintainer>

  <author email="dominik.klein@fkie.fraunhofer.de">Dominik A. Klein, Fraunhofer FKIE</author>
  <author email="stevesafarik@gmail.com">Steve Safarik, Straw Lab</author>
  <author email="andrew.straw@imp.ac.at">Andrew Straw, Straw Lab</author>
  <author email="fvanbreugel@unr.edu">Floris van Breugel, van Breugel Lab</author>

  <license>LGPL v2</license>

  <url type="website">https://github.com/fkie-forks/camera_aravis</url>
  <url type="website">https://github.com/AravisProject/aravis</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>aravis</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
</package>
